--- a/lib/app/views/edit.erb
+++ b/lib/app/views/edit.erb
@@ -2,30 +2,31 @@
         
   <div id="system-message-container">
   </div>
-    <div class="item-page">
 
-<form action='/edit' method='POST'>
+  <div class="item-page">
 
-  <p>You are editing the page called: <strong><%=page.title %></strong><br />
-    It is found at this address: <strong><%=page.url %></strong> </p><br />
+    <form action='/edit' method='POST'>
 
-  <p> Make Changes To Title:</p>
-  <input type='text' name='title' value="<%= page.title %>"/><br/><br/>
+      <p>You are editing the page called: <strong><%=page.title %></strong><br />
+        It is found at this address: <strong><%=page.url %></strong> </p><br />
 
-  <p> Make Changes To Body Text: <p>
-  <textarea name='body'style="width: 1200px; height: 1500px;" 
-    value="<%= page.body %>"></textarea><br/><br />
+      <p> Make Changes To Title:</p>
+      <input type='text' name='title' value="<%= page.title %>"/><br/><br/>
 
-  <input type='hidden' name="url" value="<%=page.url%>"/>
-  <input type="hidden" name="_method" value="PUT">
-  <input type='submit' value="Save"></input>
+      <p> Make Changes To Body Text: <p>
+      <textarea name='body'style="width: 1200px; height: 1500px;" 
+        value="<%= page.body %>"></textarea><br/><br />
 
-  </form>
-    </div>
+      <input type='hidden' name="url" value="<%=page.url%>"/>
+      <input type="hidden" name="_method" value="PUT"/>
+      <input type='submit' value="Save"/>
+
+    </form>
+
+    <form action='/' method='GET'>
+      <input type='submit' value="Cancel"/>
+    </form>
+
+  </div>
+
 </div>
-
-<!-- 
-<form action="/edit" method = 'GET'>
-  <input type='hidden' name="url" value="<%=url%>"/>
-  <input type='submit' value="EDIT"/>
-  </form>    -->
