--- a/lib/app/views/login.erb
+++ b/lib/app/views/login.erb
@@ -1,8 +1,22 @@
-<form action="/login" method="POST">
-  <label for="username"> Username:</label>
-  <input class="username" type="text" name="username">
-  <label for="password"> Password:</label>
-  <input class="password" type="password" name="password">
-  <br />
-  <input type="submit" value="Log In">
-</form>
+<div id="content-w2">
+  <div id="system-message-container"></div>
+    <div class="item-page">
+
+      <h1>Login</h1>
+      <br />
+
+      <form action="/login" method="POST">
+        <label for="username" style="display: block; line-height: 2em"> Username:</label>
+        <input class="username" type="text" name="username">
+        <br />
+        <br />
+        <label for="password" style="display: block; line-height: 2em"> Password:</label>
+        <input class="password" type="password" name="password">
+        <br />
+        <br />
+        <input type="submit" value="Log In" style="display: block">
+      </form>
+
+    </div>
+  </div>
+</div>
