fixing links and Home.erb indentation

--- a/lib/app/views/ContactHours.erb
+++ b/lib/app/views/ContactHours.erb
@@ -137,7 +137,7 @@
 
                 <div>
                     <span style="font-size:14px;">(Bike Depot&nbsp;<a href=
-                    "erb/support/memberships">Membership</a>
+                    "/support/memberships">Membership</a>
                     Information)</span>
                 </div>
             </div>
