--- a/lib/app/views/DonateBikes.erb
+++ b/lib/app/views/DonateBikes.erb
@@ -23,7 +23,7 @@
             "http://maps.google.com/maps?q=2825+Fairfax+St.++Denver,+CO+80207&amp;hl=en&amp;sll=38.997934,-105.550567&amp;sspn=4.993723,9.876709&amp;hnear=2825+Fairfax+St,+Denver,+Colorado+80207&amp;t=m&amp;z=16"
             style="text-decoration: underline" target="_blank">2825 Fairfax
             St.</a> during our <a href=
-            "http://www.thebikedepot.orgerb/about/contact" target=
+            "/about/contact" target=
             "_blank">business hours</a>.</span><span style=
             "font-size:14px;">&nbsp; We cannot pick up individual bikes, but if
             you have ten or more bikes at one location we may be able to
@@ -85,7 +85,7 @@
             your business or civic group is interested in organizing a bicycle
             collection drive to support the Bike Depot, please see the step by
             step Instructions for&nbsp;<a href=
-            "erb/support/organizing-a-bike-collection-drive">Organizing a Bike
+            "/support/organizing-a-bike-collection-drive">Organizing a Bike
             Collection Drive</a>.</span></p>
 
             <p style="text-align: justify;"><span style="font-size:14px;">To
