--- a/lib/app/views/FixYourBike.erb
+++ b/lib/app/views/FixYourBike.erb
@@ -35,7 +35,7 @@
             answer questions, <strong><em>but will not do the work for
             you!</em></strong> &nbsp;If you would like us to service your bike,
             our staff mechanics would gladly do so for our <a href=
-            "http://www.thebikedepot.org/betasiteerb/bike-shop/service" target=
+            "/bike-shop/service" target=
             "_blank">standard service rates</a>.</span></p>
 
             <p style="text-align: justify;">&nbsp;</p>
