--- a/lib/app/views/History.erb
+++ b/lib/app/views/History.erb
@@ -41,8 +41,8 @@
 
             <p style="text-align: justify;"><span style="font-size:14px;">Over
             the years, the Bike Depot has grown from an intermittently open
-            workshop space with&nbsp;<a href="erb/programs/fix-your-bike">Fix
-            Your Bike</a>&nbsp;and&nbsp;<a href="erb/programs/earn-a-bike">Earn
+            workshop space with&nbsp;<a href="/programs/fix-your-bike">Fix
+            Your Bike</a>&nbsp;and&nbsp;<a href="/programs/earn-a-bike">Earn
             A Bike</a>&nbsp;programs to a fully staffed (by paid employees and
             volunteers), full service <a href=
             "http://www.thebikedepot.org/betasiteerb/bike-shop">Bike&nbsp;Shop</a>&nbsp;open
