--- a/lib/app/views/Home.erb
+++ b/lib/app/views/Home.erb
@@ -100,139 +100,108 @@
 </style>
 
 <div id="content-w2">	
-		
-				<div id="content-top">
-			
-<div id="djslider-loader130" class="djslider-loader">
-    <div id="djslider130" class="djslider">
+  <div id="content-top">
+		<div id="djslider-loader130" class="djslider-loader">
+      <div id="djslider130" class="djslider">
         <div id="slider-container130" class="slider-container">
         	<ul id="slider130">
-<li>
-          					            											<a href="erb/about/contact" target="_self">
-															<img src="/images/depot%20staff.jpg" alt="Bike Depot Staff"></a>
-																									<!-- Slide description area: START -->
-						<div class="slide-desc">
-						  <div class="slide-desc-in">	
-							<div class="slide-desc-bg"></div>
-							<div class="slide-desc-text">
-															<div class="slide-title">
-																			Bike Depot Staff																	</div>
-														
-															<div class="slide-text">
-																																				</div>
-														
-														<div style="clear: both"></div>
-							</div>
-						  </div>
-						</div>
+            <li>
+          		<a href="/about/contact" target="_self">
+							<img src="/images/depot%20staff.jpg" alt="Bike Depot Staff"></a>
+							<!-- Slide description area: START -->
+						    <div class="slide-desc">
+						      <div class="slide-desc-in">	
+							     <div class="slide-desc-bg">
+                   </div>
+							     <div class="slide-desc-text">
+									  <div class="slide-title">
+										    Bike Depot Staff
+                    </div>			
+										  <div class="slide-text"></div>    
+											<div style="clear: both"></div>
+							     </div>
+						      </div>
+						    </div>
 						<!-- Slide description area: END -->
 												
 						
-					</li>
-                          			<li>
-          					            											<a href="erb/programs" target="_self">
-															<img src="/images/Photos/fyb%20father%20and%20son%20smiling.jpg" alt="Bike Depot Community Programs"></a>
-																									<!-- Slide description area: START -->
-						<div class="slide-desc">
-						  <div class="slide-desc-in">	
-							<div class="slide-desc-bg"></div>
-							<div class="slide-desc-text">
-															<div class="slide-title">
-																			Bike Depot Community Programs																	</div>
-														
-															<div class="slide-text">
-																																				</div>
-														
-														<div style="clear: both"></div>
-							</div>
-						  </div>
-						</div>
-						<!-- Slide description area: END -->
-												
-						
-					</li>
-                          			<li>
-          					            											<a href="erb/support/organizing-a-bike-collection-drive" target="_self">
-															<img src="/images/mp900427870.jpg" alt="Organize a Bike Collection Drive"></a>
-																									<!-- Slide description area: START -->
-						<div class="slide-desc">
-						  <div class="slide-desc-in">	
-							<div class="slide-desc-bg"></div>
-							<div class="slide-desc-text">
-															<div class="slide-title">
-																			Organize a Bike Collection Drive																	</div>
-														
-															<div class="slide-text">
-																																				</div>
-														
-														<div style="clear: both"></div>
-							</div>
-						  </div>
-						</div>
-						<!-- Slide description area: END -->
-												
-						
-					</li>
-                        	</ul>
-</div>
-                <div id="navigation130" class="navigation-container">
-        	        	<img id="prev130" class="prev-button" src="/modules/mod_djimageslider/assets/prev.png" alt="Previous"><img id="next130" class="next-button" src="/modules/mod_djimageslider/assets/next.png" alt="Next">
-</div>
-                    </div>
-</div>
+					    </li>
+              <li>
+          			<a href="/programs" target="_self">
+								<img src="/images/Photos/fyb%20father%20and%20son%20smiling.jpg" alt="Bike Depot Community Programs"></a>
+										<!-- Slide description area: START -->
+						    <div class="slide-desc">
+						      <div class="slide-desc-in">	
+							     <div class="slide-desc-bg"></div>
+							       <div class="slide-desc-text">
+										  <div class="slide-title">
+												Bike Depot Community Programs																	
+                      </div>	
+									    <div class="slide-text">
+										  </div>	
+											<div style="clear: both"></div>
+							       </div>
+						      </div>
+						    </div>
+						          <!-- Slide description area: END -->
+							</li>
+              <li>
+          			<a href="/support/organizing-a-bike-collection-drive" target="_self">
+								<img src="/images/mp900427870.jpg" alt="Organize a Bike Collection Drive"></a>
+										  <!-- Slide description area: START -->
+						    <div class="slide-desc">
+						      <div class="slide-desc-in">	
+							     <div class="slide-desc-bg"></div>
+							     <div class="slide-desc-text">
+									   <div class="slide-title">
+											 Organize a Bike Collection Drive																	
+                     </div>		
+									   <div class="slide-text"></div>
+										 <div style="clear: both"></div>
+							      </div>
+						      </div>
+						    </div>
+						<!-- Slide description area: END -->							
+					    </li>
+          </ul>
+        </div>
+        <div id="navigation130" class="navigation-container">
+        	<img id="prev130" class="prev-button" src="/modules/mod_djimageslider/assets/prev.png" alt="Previous"><img id="next130" class="next-button" src="/modules/mod_djimageslider/assets/next.png" alt="Next">
+        </div>
+      </div>
+    </div>
 	
-<div style="clear: both"></div>
+    <div style="clear: both"></div>
 
 
-		</div>
+	</div>
 		
-
-		
-		
-<div id="system-message-container">
-</div>
-		<div class="item-page">
-	<h1>
-	Home	</h1>
-
-
-
-
-
-
-
-
-
-<p>
-	<span style="font-size: 18px; text-align: justify;">Welcome to the Bike Depot</span></p>
-<div style="text-align: justify;">
-	<span style="font-size:14px;">The Bike Depot is a 501(c)(3) nonprofit community bike shop that supports Denver communities with a wide range of bicycling programs, services and products. We have a full service Bike Shop offering new and used bikes and accessories, an affordable <a href="erb/bike-shop/service">Service</a> menu and a <a href="erb/programs/fix-your-bike">Fix Your Bike</a> program where you can come to our shop and utilize our space and tools with the help of our Volunteer Mechanics.  </span>
-</div>
-<div style="text-align: justify;">
-	 </div>
-<div style="text-align: justify;">
-	<span style="font-size:14px;">Donated Bicycles are recycled to low income local residents through our <a href="erb/programs/earn-a-bike">Earn A Bike</a> programs or refurbished and sold in our bicycle shop to support all of our community service programs.</span>
-</div>
-<div>
-	<span style="font-size: 16px; ">  </span>
-</div>
-<div style="text-align: center; ">
-	 </div>
-<div style="text-align: center; ">
-	<span style="font-size: 18px; font-weight: bold;">Get Involved</span><span style="font-size: 16px;">                    </span><strong style="font-size: 16px; "><span style="font-size: 18px;">Explore Our Bike Shop</span>                          <span style="font-size: 18px;">Support   </span></strong>
-</div>
-<div style="text-align: center; ">
-	<a href="http://www.thebikedepot.orgerb/programs"><img alt="" src="/images/Square/bike_depot_rodesquare.jpg" style="height: 210px; width: 210px; "></a>       <a href="http://www.thebikedepot.orgerb/bike-shop"><img alt="" src="/images/Square/bike%20shopsquare.jpg" style="height: 210px; width: 210px; "></a>       <a href="http://www.thebikedepot.orgerb/support"><img alt="" src="/images/Photos/support%20square.jpg" style="height: 210px; width: 210px; "></a>
-</div>
-<div>
-	 </div>
-<div>
-	 </div>
-<div style="text-align: center; ">
-	<strong><span style="font-size:22px;"><a href="http://www.thebikedepot.orgerb/support/memberships">Benefits of Becoming a Bike Depot Member</a></span></strong>
-</div>
- 
-	
-</div>
-
+  <div id="system-message-container"></div>
+		<div class="item-page"><h1> Home</h1>
+      <p><span style="font-size: 18px; text-align: justify;">Welcome to the Bike Depot</span></p>
+      <div style="text-align: justify;">
+	      <span style="font-size:14px;">The Bike Depot is a 501(c)(3) nonprofit community bike shop that supports Denver communities with a wide range of bicycling programs, services and products. We have a full service Bike Shop offering new and used bikes and accessories, an affordable <a href="/bike-shop/service">Service</a> menu and a <a href="/programs/fix-your-bike">Fix Your Bike</a> program where you can come to our shop and utilize our space and tools with the help of our Volunteer Mechanics.  </span>
+      </div>
+      <div style="text-align: justify;"></div>
+      <div style="text-align: justify;">
+	      <span style="font-size:14px;">Donated Bicycles are recycled to low income local residents through our <a href="/programs/earn-a-bike">Earn A Bike</a> programs or refurbished and sold in our bicycle shop to support all of our community service programs.</span>
+      </div>
+      <div>
+	      <span style="font-size: 16px; ">  </span>
+      </div>
+      <div style="text-align: center; "></div>
+      <div style="text-align: center; ">
+	      <span style="font-size: 18px; font-weight: bold;">Get Involved</span><span style="font-size: 16px;">                    </span><strong style="font-size: 16px; "><span style="font-size: 18px;">Explore Our Bike Shop</span>                          <span style="font-size: 18px;">Support   </span></strong>
+      </div>
+      <div style="text-align: center; ">
+	      <a href="/programs"><img alt="" src="/images/Square/bike_depot_rodesquare.jpg" style="height: 210px; width: 210px; "></a>       <a href="/bike-shop"><img alt="" src="/images/Square/bike%20shopsquare.jpg" style="height: 210px; width: 210px; "></a>       <a href="/support"><img alt="" src="/images/Photos/support%20square.jpg" style="height: 210px; width: 210px; "></a>
+      </div>
+      <div>
+  	  </div>
+      <div>
+  	  </div>
+      <div style="text-align: center; ">
+	      <strong><span style="font-size:22px;"><a href="/support/memberships">Benefits of Becoming a Bike Depot Member</a></span></strong>
+      </div>	
+    </div>
 	</div>
