--- a/lib/app/views/Programs.erb
+++ b/lib/app/views/Programs.erb
@@ -13,13 +13,13 @@
 
             <p style="text-align: justify;"><span style=
             "font-size:14px;"><span style="font-size:16px;"><a href=
-            "erb/programs/earn-a-bike">Earn A Bike</a></span>&nbsp;- Anyone in
+            "/programs/earn-a-bike">Earn A Bike</a></span>&nbsp;- Anyone in
             the community that would like to do so can earn a bike by
             participating in one of our Earn A Bike programs.</span></p>
 
             <p style="text-align: justify;"><span style=
             "font-size:14px;"><span style="font-size:16px;"><a href=
-            "erb/programs/fix-your-bike">Fix Your Bike</a></span>&nbsp;- During
+            "/programs/fix-your-bike">Fix Your Bike</a></span>&nbsp;- During
             our open shop hours, those that would like to learn how to fix a
             problem or just need the tools and space to do so can.
             &nbsp;Volunteer mechanics are on hand to help with any questions
@@ -27,13 +27,13 @@
 
             <p style="text-align: justify;"><span style=
             "font-size:14px;"><span style="font-size:16px;"><a href=
-            "erb/programs/classes">Classes</a></span>&nbsp;- Providing
+            "/programs/classes">Classes</a></span>&nbsp;- Providing
             education to those who want to learn how to properly maintain,
             repair and upgrade their bike.</span></p>
 
             <p style="text-align: justify;"><span style=
             "font-size:14px;"><span style="font-size:16px;"><a href=
-            "erb/programs/bike-camp">Bike Camp</a></span>&nbsp;-&nbsp;Focused
+            "/programs/bike-camp">Bike Camp</a></span>&nbsp;-&nbsp;Focused
             on promoting the various benefits of bicycling to Denver's youth:
             as a means of transportation, a fun outdoor activity and as
             physical exercise through&nbsp;Fun Bike Rides,&nbsp;Field
@@ -42,7 +42,7 @@
 
             <p style="text-align: justify;"><span style=
             "font-size:14px;"><span style="font-size:16px;"><a href=
-            "erb/programs/bike-rodeo">Bike Rodeo</a></span>&nbsp;-&nbsp;Where
+            "/programs/bike-rodeo">Bike Rodeo</a></span>&nbsp;-&nbsp;Where
             kids "earn" a refurbished bike by attending a safety and
             maintenance or skills class.&nbsp;&nbsp;</span></p>
 
