created application page with GET and POST, and set it up to db

--- a/lib/app/views/layout.erb
+++ b/lib/app/views/layout.erb
@@ -1,7 +1,6 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en-gb" lang="en-gb" >
 <head>
-    <!-- <base href="http://www.thebikedepot.org/" /> -->
   <meta http-equiv="content-type" content="text/html; charset=utf-8" />
   <meta name="keywords" content="Where to donate a bike in Denver
 Where to donate a bike in Denver
@@ -141,6 +140,7 @@ JCEMediaObject.init('/', {flash:"10,0,22,87",windowmedia:"5,1,52,701",quicktime:
 <!-- Footer -->
 
 <div id="footer">
+  <% unless url == '/support/application' %>
   <fieldset>
     <p style="display: inline">Admin:</p>
     <% unless authorized? %>
@@ -157,6 +157,7 @@ JCEMediaObject.init('/', {flash:"10,0,22,87",windowmedia:"5,1,52,701",quicktime:
       </form>
     <% end %>
   </fieldset>
+  <% end %>
 </div>
 
 
