updated internal links for application

--- a/lib/app/views/Volunteer.erb
+++ b/lib/app/views/Volunteer.erb
@@ -37,7 +37,7 @@
                 1-2-3!&nbsp;</span></p>
 
                 <p><span style="font-size:14px;">1. Fill out the <a href=
-                "http://app.volunteer2.com/Public/SignUp?organizationGUID=1a32e143-de77-4ddf-8c9b-1b1ef9cfac44&amp;signupFormId=1">
+                "/support/application">
                 APPLICATION</a></span></p>
 
                 <p><span style="font-size:14px;">2. Attend
