--- a/lib/app/views/NewVolunteers.erb
+++ b/lib/app/views/NewVolunteers.erb
@@ -32,7 +32,7 @@
       1-2-3!&nbsp;</span></p>
 
       <p><span style="font-size:14px;">1. Fill out the <a href=
-      "http://app.volunteer2.com/Public/SignUp?organizationGUID=1a32e143-de77-4ddf-8c9b-1b1ef9cfac44&amp;signupFormId=1">
+      "/support/application">
       APPLICATION</a></span></p>
 
       <p><span style="font-size:14px;">2. Attend orientation</span></p>
@@ -42,7 +42,7 @@
 
       <p style="text-align: justify;"><span style=
       "font-size:14px;"><strong>1) Fill out the <a href=
-      "http://app.volunteer2.com/Public/SignUp?organizationGUID=1a32e143-de77-4ddf-8c9b-1b1ef9cfac44&amp;signupFormId=1">
+      "/support/application">
       APPLICATION</a></strong><br>
       <em>Please be sure to fill out the application <strong>in its
       entirety</strong>.&nbsp; As you fill it out, please think about how
