fixed application formatting

--- a/lib/app/views/volunteer_app_pg1.erb
+++ b/lib/app/views/volunteer_app_pg1.erb
@@ -1,7 +1,7 @@
 <div id="content-w2">
 <div id="system-message-container"></div>
-
 <div class="item-page">
+<fieldset>
 
 <h1 class="MediumLargeHeader Underline">Volunteer Application</h1>
 <form id="application" action="/support/application" method="POST" >
@@ -1154,8 +1154,6 @@ holder.html(newList);
 </td>
 </tr>
 </form>
-<br />
-<br />
-
+</fieldset>
 </div>
 </div>
